Fix ledger line being too short for whole notes
Reduce bytes in loading spinner.

--- a/appengine/music/style.css
+++ b/appengine/music/style.css
@@ -72,6 +72,12 @@ html[dir="RTL"] button.primary {
   position: absolute;
 }
 
+.ledgerLineWide {
+  height: 1px;
+  width: 27px;
+  position: absolute;
+}
+
 .barLine {
   height:36px;
   width: 1px;
